# interspire-mcp

./: AGENTS.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/actions/setup-rust-ci/: action.yml
.github/codeql/actions-workflow-security/: WorkflowSecurity.qll
.github/codeql/actions-workflow-security/test/ForbiddenPublicWorkflowTrigger/: ForbiddenPublicWorkflowTrigger.expected  ForbiddenPublicWorkflowTrigger.qlref
.github/codeql/actions-workflow-security/test/OverbroadWorkflowPermissions/: OverbroadWorkflowPermissions.expected  OverbroadWorkflowPermissions.qlref
.github/workflows/: binary-build.yml  code-coverage.yml  codeql-query-tests.yml  codeql.yml  dependency-governance.yml  rust.yml  security-sarif.yml
docs/: architecture.md  configuration.md  dependency-governance.md  interspire-xml-compatibility.md  live-proof-matrix.md  operator-workflow.md  safety-model.md  source-compatibility-regression.md
scripts/: dependency_governance_check.sh  private_interspire_source_contract_check.py
spec/: tool_schema_snapshot.v1.json
src/: admin_html.rs  audience_hygiene.rs  audience_hygiene_checkpoint.rs  config.rs  error.rs  guarded_write.rs  lib.rs  live.rs  main.rs  oci_ledger.rs  private_artifacts.rs  response.rs  safety.rs  xml_api.rs
src/admin_html/: campaign_state.rs  forms.rs  proof.rs  scaffold.rs  send_ops.rs
src/live/: audience.rs  checkpoint.rs  guarded.rs  reads.rs  scaffold.rs  send.rs
src/response/: audience.rs  common.rs  forms.rs  oci_ledger.rs  production_send.rs  queue.rs  render.rs  scaffold.rs  seed_send.rs  send_ops.rs  send_outcome.rs  send_wizard.rs  template.rs  test_send.rs
tests/: domain_contracts.rs  stdio_smoke.rs  tool_schema_snapshot.rs
(+6 files in other folders)
