[package]
name = "interspire-mcp"
version = "0.1.0"
edition = "2021"
description = "Safe, curated MCP tools for Interspire Email Marketer operations"
license = "Apache-2.0"
repository = "https://github.com/sednalabs/interspire-mcp"
readme = "README.md"
publish = false

[dependencies]
csv = "1.4.0"
hex = "0.4.3"
libc = "0.2.186"
mcp-toolkit = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "aa0fbced690f80f0d04396b99f18c5fce833a73c", features = ["server-stdio"] }
mcp-toolkit-core = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "aa0fbced690f80f0d04396b99f18c5fce833a73c" }
mcp-toolkit-observability = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "aa0fbced690f80f0d04396b99f18c5fce833a73c" }
mcp-toolkit-policy-core = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "aa0fbced690f80f0d04396b99f18c5fce833a73c" }
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "cookies", "rustls-tls"] }
rmcp = { version = "=1.8.0", default-features = false, features = ["macros", "schemars", "server", "transport-io"] }
roxmltree = "0.21.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
schemars = "1.2.1"
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
url = "2.5.7"

[dev-dependencies]
mcp-toolkit-testing = { version = "0.1.0", git = "https://github.com/sednalabs/mcp-toolkit-rs", rev = "aa0fbced690f80f0d04396b99f18c5fce833a73c" }
